Bug 421810, focus not shifting to browser, only check the focus model for controls, r=smaug,sr=neil